kubernetes/ns-devops/nexus/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: devops
spec:
  selector:
    app: nexus-registry
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    name: web-ui
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: docker
