kubernetes/ns-devops/nexus/03-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: devops
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - nexus.sytoss.intra
    secretName: traefik-ui-tls-cert
  rules:
  - host: nexus.sytoss.intra
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-service
          servicePort: 8081
      - path: /v2
        backend:
          serviceName: nexus-service
          servicePort: 5000
